# isaaclab-quadruped-robust-locomotion

./: .gitignore  ENVIRONMENT.md  INSTALL.md  README.md  ROADMAP.md  RUNBOOK.md  pyproject.toml
.github/workflows/: local-ci.yml
configs/: go2_flat_baseline.yaml  go2_rough_baseline.yaml  go2_rough_dr.yaml  go2_rough_dr_curriculum.yaml  robustness_sweep.yaml  version_matrix.md
configs/deployment/: go2_policy_interface.yaml  ros2_topics.yaml
reports/: domain_randomization_plan.md  evaluation_protocol.md  experiment_plan.md  failure_analysis.md  hardware_ready_interface.md  policy_export_plan.md  rental_gpu_log.md  rented_gpu_validation_checklist.md  ros2_bridge_plan.md
results/eval/: placeholder_go2_flat_eval.json
results/tables/: summary.csv  summary.md
scripts/: demo_local_interface.py  export_policy.sh  list_envs.sh  play_policy.sh  record_video.sh  setup_runtime_isaaclab.sh  smoke_test_isaaclab.sh  summarize_results.py  train_go2_flat.sh  train_go2_rough.sh  train_go2_rough_dr.sh  validate_export.sh  validate_runtime_isaaclab.sh
source/isaaclab_quadruped/: __init__.py
source/isaaclab_quadruped/deployment/: __init__.py  action_scaling.py  export_manifest.py  export_metadata.py  interface_demo.py  observation_schema.py  policy_contract.py  safety.py
source/isaaclab_quadruped/experiments/: __init__.py  schema.py
source/isaaclab_quadruped/ros2_bridge/: __init__.py  bridge_config.py  fake_state.py  topic_contracts.py
source/isaaclab_quadruped/utils/: __init__.py  plotting.py  result_io.py  tables.py
tests/pure/: test_action_safety.py  test_configs.py  test_demo_local_interface.py  test_export_manifest.py  test_fake_state.py  test_import_boundaries.py  test_interface_demo.py  test_observation_schema.py  test_policy_contract.py  test_ros2_topic_contracts.py  test_summarize_results.py
tests/sim/: test_isaaclab_runtime.py
