[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isaaclab_quadruped"
version = "0.1.0"
description = "External Isaac Lab project utilities for robust quadruped locomotion experiments."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
  { name = "Project Maintainer" }
]
dependencies = [
  "pyyaml",
  "numpy",
  "pandas",
  "matplotlib",
  "rich",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black",
]

[tool.setuptools]
package-dir = { "" = "source" }

[tool.setuptools.packages.find]
where = ["source"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["source"]
addopts = "-q"
markers = [
  "sim: rented-GPU Isaac Lab validation tests, skipped unless RUN_SIM_TESTS=1",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["source", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
